--- a/src/utils/style/apropos.scss
+++ b/src/utils/style/apropos.scss
@@ -8,8 +8,8 @@
   .logo {
     border-radius: 20px;
     object-fit: cover;
-    height: 200px;
-    width: 1800px;
+    height: 223px;
+    width: 1240px;
   }
 
   .valeurs {
@@ -17,15 +17,17 @@
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
+    margin-bottom: 100px;
 
     .cadre-mot {
       border-radius: 5px;
-      width: 1500px;
+      width: 1023px;
       padding: 10px;
       margin: 20px;
       display: flex;
       align-items: center;
       background-color: #ff6060;
+      height: 52px;
 
       .mot-text {
         flex: 1;
@@ -54,8 +56,8 @@
 .depliant-apropos {
   background-color: #F9F9F9;
   border-radius: 0px 0px 10px 10px;
-  width: 1480px;
-  height: 70px;
+  width: 1001px; 
+  height: 52px; 
   padding: 20px;
 }
 
