Mise en place d'un cart qui référence toutes les locations disponibles (avec scss) + mise en place d'un page type logement (avec scss) + debuguage du footer + ajout sur la racine du projet de la route vers la page logement

--- a/src/utils/style/home.scss
+++ b/src/utils/style/home.scss
@@ -51,7 +51,6 @@
 
 .location {
   background-color: #ff6060;
-  border: solid;
   color: white;
   border-radius: 10px;
   height: 250px;
@@ -61,3 +60,8 @@
   font-weight: bold;
   cursor: pointer;
 }
+
+.location-link {
+  text-decoration: none;
+}
+
