--- a/src/utils/style/footer.scss
+++ b/src/utils/style/footer.scss
@@ -2,7 +2,6 @@
   background-color: black;
   color: white;
   padding: 20px;
-  bottom: 0;
   display: flex;
   align-items: center;
   flex-direction:column ;
@@ -12,4 +11,10 @@
     padding-top: 25px;
 
   }
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
