--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -1,69 +1,40 @@
-.apropos-page {
+.about-banner {
+  margin: 0 0 30px 0;
+  }
+
+.accordions-wrapper-about {
+  width: 100%;
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
-
-  .logo {
-    border-radius: 20px;
-    object-fit: cover;
-    height: 223px;
-    width: 1240px;
-  }
-
-  .valeurs {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-
-    .cadre-mot {
+  margin-bottom: 30px;
+  gap: 30px;
+  .accordion {
       border-radius: 5px;
-      width: 1023px;
-      padding: 0 10px 0 10px;
-      margin: 10px;
-      display: flex;
-      align-items: center;
-      background-color: #ff6060;
-      height: 52px;
-
-      .mot-text {
-        flex: 1;
-        color: white;
-        font-weight: bold;
-        cursor: pointer;
-      }
-
-      .arrow-icon {
-        height: 25px;
-        cursor: pointer;
-        transition: transform 0.3s;
-      }
-    }
-
-    .cadre-mot.no-margin {
-      margin: 0;
-    }
   }
 }
 
-.arrow-icon.rotated {
-  transform: rotate(180deg);
+.accordions-wrapper-about .accordion__title {
+  border-radius: 5px;
+  p {
+      font-size: 24px;
+      font-weight: 400;
+  }
+
 }
 
-.depliant-apropos {
-  background-color: #F9F9F9;
-  border-radius: 0px 0px 10px 10px;
-  width: 1001px; 
-  height: 52px; 
-  padding: 20px;
+.accordions-wrapper-about .accordion__description {
+  font-size: 22px;
+  font-weight: 400;
+  border-radius: 5px;
+  padding: 0 15px 0 15px;
+  overflow: hidden;
+  &.active {
+      padding: 70px 15px 25px 15px;
+  }
+
 }
 
-.arrow-icon-button {
-  background: none;
-  border: none;
-  padding: 0;
-  margin: 0;
-  outline: none;
+.accordions-wrapper-about .accordion__description-details {
+  overflow: hidden;
 }
