--- a/src/style/banner.scss
+++ b/src/style/banner.scss
@@ -1,31 +1,32 @@
 .banner {
-    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1240px;
-    height: 200px;
     border-radius: 25px;
-
+    height: 223px;
+    width: 1240px;
+    position: relative;
+    margin: 0 auto;
+  
     h1 {
-        position: absolute;
-        text-align: center;
-        color: white;
-        font-size: 48px;
-        width: 100%;
-        font-weight: 500;
-        z-index: 1;
-        margin: 0;
-        box-sizing: border-box;
-        padding: 15px;
-
+      position: absolute;
+      text-align: center;
+      color: white;
+      font-size: 48px;
+      width: 100%;
+      font-weight: 500;
+      z-index: 1;
+      margin: 0;
+      box-sizing: border-box;
+      padding: 15px;
     }
+  
     img {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        border-radius: 25px;
-        object-fit: cover;
-        filter: brightness(0.75);
+      width: 100%;
+      height: 100%;
+      border-radius: 25px;
+      object-fit: cover;
+      filter: brightness(0.75);
     }
-}
+  }
+  
