--- a/src/style/banner.scss
+++ b/src/style/banner.scss
@@ -1,32 +1,51 @@
 .banner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-    height: 223px;
-    width: 1240px;
-    position: relative;
-    margin: 0 auto;
-  
-    h1 {
-      position: absolute;
-      text-align: center;
-      color: white;
-      font-size: 48px;
-      width: 100%;
-      font-weight: 500;
-      z-index: 1;
-      margin: 0;
-      box-sizing: border-box;
-      padding: 15px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  height: 200px;
+  margin-left: 95px;
+  border-radius: 25px;
+  @media (max-width: 768px) {
+    border-radius: 10px;
+    height: 150px;
+    margin: auto;
+  }
+  @media (max-width: 480px) {
+    height: 100px;
+  }
+
+  @media (max-width: 1048px) {
+    margin: auto;
+  }
+  h1 {
+    position: absolute;
+    text-align: center;
+    color: white;
+    font-size: 48px;
+    width: 100%;
+    font-weight: 500;
+    z-index: 1;
+    margin: 0;
+    box-sizing: border-box;
+    padding: 15px;
+    @media (max-width: 768px) {
+      font-size: 36px;
     }
-  
-    img {
-      width: 100%;
-      height: 100%;
-      border-radius: 25px;
-      object-fit: cover;
-      filter: brightness(0.75);
+    @media (max-width: 480px) {
+      font-size: 24px;
     }
   }
-  
+  img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+    object-fit: cover;
+    filter: brightness(0.75);
+    @media (max-width: 480px) {
+      border-radius: 10px;
+    }
+  }
+}
