--- a/src/style/error.scss
+++ b/src/style/error.scss
@@ -6,15 +6,39 @@
   margin-top: 139px;
   margin-bottom: 139px;
 
+  @media (max-width: 480px) {
+    display: flex;
+    justify-content: center;
+  }
+
   .error-phrase {
     color: #ff6060;
     font-size: 36px;
     margin-top: 139px;
     margin-bottom: 139px;
-  }
-}
+    text-align: center;
 
-a {
-  color: black;
-  font-weight: bold;
+    @media (max-width: 790px) {
+      font-size: 30px;
+      margin-left: 20px;
+      margin-right: 20px;
+    }
+
+    @media (max-width: 480px) {
+      font-size: 25px;
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+  }
+
+  a {
+    color: black;
+    font-weight: bold;
+  }
+
+  img {
+    @media (max-width: 580px) {
+      width: 230px;
+    }
+  }
 }
