--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -4,6 +4,12 @@ footer {
   flex-direction: column;
   align-items: center;
   padding: 45px 0 20px 0;
+
+  @media (max-width: 1048px) {
+    padding: 90px;
+
+  }
+
   img {
       height: 30px;
       margin-bottom: 25px;
