--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -3,17 +3,26 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
+ 
+  @media (max-width: 1048px) {
+    gap: 10px;
+  }
+
   .link {
     text-decoration: none;
     padding-right: 55px;
     color: black;
     font-weight: bold;
-  
+
+    @media (max-width: 1048px) {
+      font-size: 15px;
+      padding-right: 10px;
+    }
+
     &:hover {
       text-decoration: none;
     }
-    
+
     &.visited {
       text-decoration: underline;
       text-decoration-thickness: 1px;
@@ -24,4 +33,13 @@
 
 .logo {
   height: 45px;
+
+  @media (max-width: 1048px) {
+    width: 145px;
+    margin-left: -30px;
+
+    @media (max-width: 480px) {
+      width: 125px;
+    }
+}
 }
