--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media (max-width: 480px) {
+    margin: auto;
+  }
+
 }
 
 .header-container {
@@ -20,6 +25,14 @@
   border-radius: 20px;
   margin-top: 50px;
   margin-bottom: 150px;
+
+  @media (max-width: 1048px) {
+background-color: transparent;
+width: 90%;
+margin-top: -5px;
+margin-bottom: -2px;
+  }
+
 }
 
 .wrapper-grid {
@@ -28,6 +41,12 @@
   grid-gap: 35px;
   max-width: 1100px;
   width: 100%;
+
+  @media (max-width: 1048px) {
+    display: flex;
+    flex-direction: column;
+  }
+
 }
 
 .location {
