--- a/src/style/locationdetails.scss
+++ b/src/style/locationdetails.scss
@@ -2,6 +2,10 @@
   margin-left: 250px;
   margin-right: 250px;
   margin-top: 30px;
+
+  @media (max-width: 1048px) {
+    margin: -25px 25px -25px 25px;
+  }
 }
 
 .location-about {
@@ -10,12 +14,15 @@
   width: 100%;
   margin-top: 30px;
   justify-content: space-between;
-  @media (max-width: 768px) {
+
+  @media (max-width: 1048px) {
+    margin-top: -5px;
+  }
+
+  @media (max-width: 480px) {
     flex-direction: column;
   }
-  @media (max-width: 480px) {
-    gap: 15px;
-  }
+
   p {
     color: #ff6060;
     margin: 0;
@@ -28,8 +35,9 @@
   align-items: flex-start;
   gap: 15px;
   margin-right: 25px;
+
   @media (max-width: 480px) {
-    gap: 10px;
+    order: 1;
   }
 }
 
@@ -39,23 +47,22 @@
     font-size: 36px;
     font-weight: 500;
     margin: 0;
-    @media (max-width: 768px) {
-      font-size: 26px;
-    }
+
     @media (max-width: 480px) {
       font-size: 18px;
-      margin-bottom: 10px;
     }
   }
+  
   p {
     font-size: 18px;
     color: black;
-    @media (max-width: 768px) {
-      font-size: 16px;
+    margin-top: 5px;
+
+    @media (max-width: 1500px) {
+      font-size: 18px;
+      font-weight: normal;
     }
-    @media (max-width: 480px) {
-      font-size: 14px;
-    }
+
   }
 }
 
@@ -65,9 +72,7 @@
   flex-direction: row;
   align-items: center;
   margin: 0 0 20px 0;
-  @media (max-width: 480px) {
-    margin: 0;
-  }
+
   .tags-list {
     display: flex;
     flex-direction: row;
@@ -77,9 +82,25 @@
     gap: 10px;
     flex-wrap: wrap;
 
+    ul {
+      @media (max-width: 460px) {
+        display: flex;
+        flex-direction: row;
+      }
+    }
+
     li {
       font-weight: bold;
+
+      @media (max-width: 480px) {
+        font-size: 10px;
+        font-weight: bold;
+      }
     }
+  }
+
+  @media (max-width: 480px) {
+    order: 2;
   }
 }
 
@@ -95,14 +116,6 @@
   border-radius: 12px;
   font-size: 14px;
   font-weight: 500;
-  @media (max-width: 768px) {
-    font-size: 12px;
-  }
-  @media (max-width: 480px) {
-    height: 18px;
-    font-size: 10px;
-    border-radius: 5px;
-  }
 }
 
 .host-informations {
@@ -111,26 +124,21 @@
   width: fit-content;
   gap: 15px;
   align-items: flex-end;
-  @media (max-width: 768px) {
-    width: 100%;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 15px;
-  }
+
   @media (max-width: 480px) {
-    flex-wrap: wrap;
+    order: 3;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px ;
+    width: 100%;
   }
+
   p {
     font-size: 18px;
     font-weight: 500;
     text-align: end;
-    @media (max-width: 768px) {
-      font-size: 15px;
-    }
-    @media (max-width: 480px) {
-      font-size: 12px;
-    }
   }
 }
 
@@ -139,21 +147,13 @@
   flex-direction: row;
   gap: 10px;
   align-items: center;
-  @media (max-width: 480px) {
-    width: 110px;
-  }
+  width: 150px;
+
+
   img {
     height: 64px;
     width: 64px;
     border-radius: 100%;
-    @media (max-width: 768px) {
-      height: 48px;
-      width: 48px;
-    }
-    @media (max-width: 480px) {
-      height: 32px;
-      width: 32px;
-    }
   }
 }
 
@@ -164,13 +164,16 @@
   align-items: flex-start;
   gap: 60px;
   margin-bottom: 30px;
-  @media (max-width: 768px) {
+
+  @media (max-width: 1048px) {
     flex-direction: column;
-    gap: 20px;
+    gap: 2px;
   }
+
   .accordion {
     border-radius: 15px;
-    @media (max-width: 768px) {
+
+    @media (max-width: 1048px) {
       width: 100%;
     }
   }
@@ -178,21 +181,27 @@
 
 .accordions-wrapper-location .accordion__title {
   border-radius: 10px;
+
   @media (max-width: 768px) {
     height: 40px;
+    width: 100%;
   }
+
   @media (max-width: 480px) {
     height: 30px;
     border-radius: 5px;
   }
+
   p {
     margin: 0;
     color: white;
     font-size: 18px;
     font-weight: bold;
-    @media (max-width: 768px) {
+
+    @media (max-width: 1048px) {
       font-size: 16px;
     }
+
     @media (max-width: 480px) {
       font-size: 13px;
     }
@@ -209,24 +218,30 @@
   font-size: 16px;
   border-radius: 10px;
   padding: 0 18px;
+
   &.active {
     padding: 70px 18px 25px 18px;
     height: fit-content;
   }
+
   @media (max-width: 768px) {
     height: 40px;
     font-size: 15px;
+
     &.active {
       padding: 20px 20px;
     }
   }
+
   @media (max-width: 480px) {
     height: 30px;
     font-size: 12px;
+
     &.active {
       padding: 15px 15px;
     }
   }
+
   p {
     font-size: 17px;
     font-weight: 400;
@@ -235,10 +250,12 @@
 
 .accordions-wrapper-location .accordion__description-details {
   overflow: hidden;
+
   &.active {
     @media (max-width: 768px) {
       padding-top: 40px;
     }
+
     @media (max-width: 480px) {
       padding-top: 35px;
     }
